--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-scripts": "2.1.3",
     "react-test-renderer": "^16.7.0",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0"
   },
   "husky": {
